--- a/.vscode/atv matematica.html
+++ b/.vscode/atv matematica.html
@@ -111,9 +111,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">Título da Imagem</div>
+    <div class="title">Atividade favorita matematica</div>
     <div class="photo">
-      <img src="sua-imagem.jpg" alt="Descrição">
+      <img src="" alt="Descrição">
     </div>
     <div class="text-area" contenteditable="true">Escreva algo aqui...</div>
   </div>
