--- a/botoes cada atvidade.html
+++ b/botoes cada atvidade.html
@@ -153,19 +153,19 @@
 <body>
   <h1>Atividades Favoritas</h1>
   <div class="navbar">
-    <button>História</button>
-    <button>Geografia</button>
-    <button>Sociologia</button>
-    <button>Filosofia</button>
-    <button>Química</button>
-    <button>Biologia</button>
-    <button>Física</button>
-    <button>Educação Física</button>
-    <button>Inglês</button>
-    <button>Português</button>
-    <button>Artes</button>
-    <button>Matemática</button>
-    <button>Técnico</button>
+    <button><a href="atv historia.html">História</a></button> 
+    <button><a href="atv geografia.html">geografia</a></button> 
+    <button><a href="atv sociologia.html">Sociologia</a></button> 
+    <button><a href="atv filosofia.html">Filosofia</a></button> 
+    <button><a href="atv quimica.html">Quimica</a></button> 
+    <button><a href="atv biologia.html">biologia</a></button> 
+    <button><a href="Atv fisica.html">fisica</a></button> 
+    <button><a href="atv educação fisica.html">educação fisica</a></button> 
+    <button><a href="atv ingles.html">Ingles</a></button> 
+    <button><a href="atv portuges.html">Portugues</a></button> 
+    <button><a href="atv artes.html">Artes</a></button> 
+    <button><a href="atv matematica">Matematica</a></button> 
+    <button><a href="atv tecnico.html">Técnico</a></button> 
   </div>
   <div class="content">
     <p>Escolha uma atividade para saber mais!</p>
