--- a/pagina inicial.html
+++ b/pagina inicial.html
@@ -142,6 +142,7 @@
             <button><a href="portifolio pessoal.html">Portifolio pessoal</a></button>
             <button><a href="satisfação.html">Satisfação</a></button>
             <a href=https://www.linkedin.com/in/alex-c-s-b03b85298//" target="_blank" class="button">Meu LinkedIn</a>
+            <a href="botoes cada atvidade.html" class="button">Paginas de atv</a>
         </div>
     </div>
     <footer>
