atualização do site

--- a/atv educação fisica.html
+++ b/atv educação fisica.html
@@ -113,7 +113,7 @@
   <div class="container">
     <div class="title">Atividade educação fisica</div>
     <div class="photo">
-      <img src="sua-imagem.jpg" alt="Descrição">
+      <img src="Captura de tela 2024-11-27 181330.png" alt="Descrição">
     </div>
     <div class="text-area" contenteditable="true">Escreva algo aqui...</div>
   </div>
