--- a/atv sociologia.html
+++ b/atv sociologia.html
@@ -113,7 +113,7 @@
   <div class="container">
     <div class="title">Atividade sociologia</div>
     <div class="photo">
-      <img src="sua-imagem.jpg" alt="Descrição">
+      <img src="sociologia.jfif" alt="Descrição">
     </div>
     <div class="text-area" contenteditable="true">Escreva algo aqui...</div>
   </div>
