--- a/atv tecnico.html
+++ b/atv tecnico.html
@@ -113,7 +113,7 @@
   <div class="container">
     <div class="title">Atividades do tecnico</div>
     <div class="photo">
-      <img src="sua-imagem.jpg" alt="Descrição">
+      <img src="tecnico.png" alt="Descrição">
     </div>
     <div class="text-area" contenteditable="true">Escreva algo aqui...</div>
   </div>
