--- a/Atv fisica.html
+++ b/Atv fisica.html
@@ -113,7 +113,7 @@
   <div class="container">
     <div class="title">Atividade fisica</div>
     <div class="photo">
-      <img src="sua-imagem.jpg" alt="Descrição">
+      <img src="fisica.jfif" alt="Descrição">
     </div>
     <div class="text-area" contenteditable="true">Escreva algo aqui...</div>
   </div>
