--- a/atv historia.html
+++ b/atv historia.html
@@ -113,7 +113,7 @@
   <div class="container">
     <div class="title">Atividade historia</div>
     <div class="photo">
-      <img src="sua-imagem.jpg" alt="Descrição">
+      <img src="socilogia.jfif" alt="Descrição">
     </div>
     <div class="text-area" contenteditable="true">Escreva algo aqui...</div>
   </div>
