--- a/atv ingles.html
+++ b/atv ingles.html
@@ -113,7 +113,7 @@
   <div class="container">
     <div class="title">Atividade ingles</div>
     <div class="photo">
-      <img src="sua-imagem.jpg" alt="Descrição">
+      <img src="Ingles.png" alt="Descrição">
     </div>
     <div class="text-area" contenteditable="true">Escreva algo aqui...</div>
   </div>
